# oxidized-curses

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
src/: color.rs  cursor.rs  io_attrs.rs  lib.rs  ncurses.rs  utils.rs  window.rs
src/ncurses/: cursor.rs  mod.rs  window.rs
src/window/: main_window.rs  mod.rs  moveable_window.rs  sub_window.rs  window.rs
