[package]
name = "oxidized-curses"
version = "0.1.3"
edition = "2018"
description = "A rusty ncurses binding"
license = "GPL-3.0"
repository = "https://github.com/casually-blue/oxidized-curses"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
